added authors for all html and css files except for stats - didnt want to create merge conflicts

--- a/app/client/floorPlan/floorplan.html
+++ b/app/client/floorPlan/floorplan.html
@@ -1,3 +1,8 @@
+<!--
+Authors - Mit, Raj, Prabhjot, Nill, Dylan, Mouli
+Project Website - https://github.com/Mitbits/Software-Project
+-->
+
 <template name="floorplan">
     <button id="merge_button" class="ui primary button" clicked="false"> Manual Merge</button>
      <div class="ui four column grid" id="fourColumnGrid">
