--- a/app/client/order/order.html
+++ b/app/client/order/order.html
@@ -1,3 +1,8 @@
+<!--
+Authors - Mit, Raj, Prabhjot, Nill, Dylan, Mouli
+Project Website - https://github.com/Mitbits/Software-Project
+-->
+
 <template name = "orderQueue">
 	<div class = "ui sizer vertical segment">
 		<div class = "ui center aligned huge header">Order Queue</div>
