--- a/app/client/reservation/reservation.html
+++ b/app/client/reservation/reservation.html
@@ -1,3 +1,8 @@
+<!--
+Authors - Mit, Raj, Prabhjot, Nill, Dylan, Mouli
+Project Website - https://github.com/Mitbits/Software-Project
+-->
+
 <template name="reservationPage">
     <head>
         <!-- Latest compiled and minified CSS -->
