--- a/app/client/inventory/inventory.html
+++ b/app/client/inventory/inventory.html
@@ -1,3 +1,8 @@
+<!--
+Authors - Mit, Raj, Prabhjot, Nill, Dylan, Mouli
+Project Website - https://github.com/Mitbits/Software-Project
+-->
+
 <template name="inventoryPage">
     <div class="container" ng-controller="index">
 
