--- a/app/client/manager/manager.html
+++ b/app/client/manager/manager.html
@@ -1,3 +1,8 @@
+<!--
+Authors - Mit, Raj, Prabhjot, Nill, Dylan, Mouli
+Project Website - https://github.com/Mitbits/Software-Project
+-->
+
 <template name="menuSuggestions">
     <!--
     <h1> Manager Page, WIP</h1>
