--- a/app/client/waiter/waiter.html
+++ b/app/client/waiter/waiter.html
@@ -1,3 +1,8 @@
+<!--
+Authors - Mit, Raj, Prabhjot, Nill, Dylan, Mouli
+Project Website - https://github.com/Mitbits/Software-Project
+-->
+
 <template name="waiter">
     <!-- Navigation -->
     <nav id="slide-menu">
