author and project website

--- a/app/client/stat/kitchen.html
+++ b/app/client/stat/kitchen.html
@@ -1,3 +1,5 @@
+<!--Authors: Raj Patel, Mit Patel, Dylan Herman, Moulindra Muchumari, Prabhjot Singh, Nill Patel-->
+<!--Project Website: https://github.com/Mitbits/Software-Project-->
 <template name="kitchen">
   <h1>Cook Time of an Item</h1>
   <select id="cookTimeItems" class="ui dropdown">
