--- a/app/client/reservation/reservationSuccess.html
+++ b/app/client/reservation/reservationSuccess.html
@@ -1,3 +1,5 @@
+<!--Authors: Raj Patel, Mit Patel, Dylan Herman, Moulindra Muchumari, Prabhjot Singh, Nill Patel-->
+<!--Project Website: https://github.com/Mitbits/Software-Project-->
 <template name="reservationSuccess">
     <h1>Your Reservation has been confirmed!</h1>
 </template>
