--- a/app/client/stat/archive.html
+++ b/app/client/stat/archive.html
@@ -1,3 +1,5 @@
+<!--Authors: Raj Patel, Mit Patel, Dylan Herman, Moulindra Muchumari, Prabhjot Singh, Nill Patel-->
+<!--Project Website: https://github.com/Mitbits/Software-Project-->
 <template name="archive">
   <h1>View Past Transactions</h1>
   <div id="container">
