--- a/app/client/stat/billing.html
+++ b/app/client/stat/billing.html
@@ -1,3 +1,5 @@
+<!--Authors: Raj Patel, Mit Patel, Dylan Herman, Moulindra Muchumari, Prabhjot Singh, Nill Patel-->
+<!--Project Website: https://github.com/Mitbits/Software-Project-->
 <template name="billing">
   <h1>View Past Transactions</h1>
   <!--<input type="text" class="form-control" id="my-datepicker">-->
