--- a/app/client/stat/general.html
+++ b/app/client/stat/general.html
@@ -1,3 +1,5 @@
+<!--Authors: Raj Patel, Mit Patel, Dylan Herman, Moulindra Muchumari, Prabhjot Singh, Nill Patel-->
+<!--Project Website: https://github.com/Mitbits/Software-Project-->
 <template name="general">
   <h1>Time Spent by a Customer in the Restaurant</h1>
   {{createTimeSpentGraph}}
