--- a/app/client/stat/reservation.html
+++ b/app/client/stat/reservation.html
@@ -1,3 +1,5 @@
+<!--Authors: Raj Patel, Mit Patel, Dylan Herman, Moulindra Muchumari, Prabhjot Singh, Nill Patel-->
+<!--Project Website: https://github.com/Mitbits/Software-Project-->
 <template name="reservations">
 	<h1> Reservation Chart</h1>
 	{{reservationBarChart}}
