--- a/app/client/stat/stat.html
+++ b/app/client/stat/stat.html
@@ -1,3 +1,5 @@
+<!--Authors: Raj Patel, Mit Patel, Dylan Herman, Moulindra Muchumari, Prabhjot Singh, Nill Patel-->
+<!--Project Website: https://github.com/Mitbits/Software-Project-->
 <template name="stat">
   <div class="ui top inverted menu">
     <div class="item"><span class="large text">Manager</span></div>
